--- a/cxss.ini
+++ b/cxss.ini
@@ -78,9 +78,9 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=⚖️ 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
 ;--- 【辰星服务】最高优先级策略组 ---
-custom_proxy_group=🌟 辰星直连`select`[]⚖️ 负载均衡`[]♻️ 自动选择`[]🎯 全球直连`[]🚀 节点选择`[]☑️ 手动切换`.*
-custom_proxy_group=🤖 辰星AI`select`[]⚖️ 负载均衡`[]♻️ 自动选择`[]🚀 节点选择`[]🇺🇲 美国节点`[]☑️ 手动切换`.*
-custom_proxy_group=🌍 辰星翻墙`select`[]⚖️ 负载均衡`[]♻️ 自动选择`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`.*
+custom_proxy_group=🌟 辰星直连`select`[]DIRECT`[]⚖️ 负载均衡`[]♻️ 自动选择`[]🎯 全球直连`[]🚀 节点选择`[]☑️ 手动切换`.*
+custom_proxy_group=🤖 辰星AI`select`[]🇺🇲 美国节点`[]⚖️ 负载均衡`[]♻️ 自动选择`[]🚀 节点选择`[]☑️ 手动切换`.*
+custom_proxy_group=🌍 辰星翻墙`select`[]🇭🇰 香港节点`[]⚖️ 负载均衡`[]♻️ 自动选择`[]🚀 节点选择`[]🇺🇲 美国节点`[]☑️ 手动切换`.*
 
 ;--- 【AI服务】策略组 ---
 custom_proxy_group=🤖 OpenAI`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
