--- a/cxss.ini
+++ b/cxss.ini
@@ -86,7 +86,7 @@ custom_proxy_group=🌍 辰星翻墙`select`[]🇭🇰 香港节点`[]⚖️ 负
 custom_proxy_group=🤖 OpenAI`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
 
 ;--- 【流媒体】策略组 ---
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 
