--- a/cxss.ini
+++ b/cxss.ini
@@ -99,8 +99,8 @@ custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
 
 ;--- 【地区节点】策略组 ---
-custom_proxy_group=🇭🇰 香港节点`select`[]♻️ 自动选择`[]🚀 节点选择`[]⚖️ 负载均衡`(港|HK|hk|Hong Kong|HongKong|hongkong)
-custom_proxy_group=🇺🇲 美国节点`select`[]♻️ 自动选择`[]🚀 节点选择`[]⚖️ 负载均衡`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🇭🇰 香港节点`select`[]♻️ 自动选择`[]⚖️ 负载均衡`(港|HK|hk|Hong Kong|HongKong|hongkong)
+custom_proxy_group=🇺🇲 美国节点`select`[]♻️ 自动选择`[]⚖️ 负载均衡`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 
 ;--- 【基础策略组】---
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
