[配置] 启用节点过滤和UDP协议支持
详细说明：
- 启用exclude_remarks节点过滤功能
- 基于测试数据优化过滤规则：到期2099-12-31 剩余999T 官网cxss.pages.dev 产品 辰星订阅
- 启用UDP协议支持，提升网络兼容性
- 清理测试文件，保持仓库整洁

配置修改：
- exclude_remarks: 过滤无效测试节点
- udp=true: 启用UDP流量代理
- 过滤关键词: 到期|剩余|流量|时间|官网|产品|平台|测试|TEST|test|辰星订阅|999T|2099

功能提升：
- 自动过滤广告和测试节点
- 支持UDP协议（游戏、DNS等）
- 提升订阅节点质量

--- a/cxss.ini
+++ b/cxss.ini
@@ -115,6 +115,6 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 ;--- 可选配置（根据需要启用）---
-;exclude_remarks=(到期|剩余|流量|时间|官网|产品|平台|TEST|test)
+exclude_remarks=(到期|剩余|流量|时间|官网|产品|平台|测试|TEST|test|辰星订阅|999T|2099)
 ;emoji=true
-;udp=true
+udp=true
