--- a/cxss.ini
+++ b/cxss.ini
@@ -74,6 +74,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;--- 【核心策略组】---
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]⚖️ 负载均衡`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=Proxy`select`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=⚖️ 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
@@ -113,6 +114,7 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直
 ;=======================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
+proxy-server-nameserver=114.114.114.114,119.29.29.29,8.8.8.8,1.1.1.1
 
 ;--- 可选配置（根据需要启用）---
 exclude_remarks=(到期|剩余|流量|时间|官网|产品|平台|测试|TEST|test|辰星订阅|999T|2099)
